--- a/style.css
+++ b/style.css
@@ -3,13 +3,21 @@ body {
   font-weight: 700;
 }
 .navbar-custom {
-  background-color: #ffffff; /* white color */
+  background-color: #ffffff;
+  direction: rtl;
 }
+
+.navbar-nav .dropdown-menu {
+  text-align: right;
+  right: 0;
+  left: auto;
+}
+
 .navbar-custom .navbar-brand {
-  color: #6d758f; /* sec color */
+  color: #6d758f;
 }
 .navbar-custom .nav-link {
-  color: #6d758f; /* sec color */
+  color: #6d758f;
 }
 
 .navbar-nav .nav-item .nav-link,
@@ -17,6 +25,11 @@ body {
   list-style-type: none;
   color: #6d758f;
   font-size: 1rem;
+}
+
+.nav-link.dropdown-toggle::after {
+  margin-left: 0.255em;
+  margin-right: 0;
 }
 
 .dropdown-item {
@@ -41,6 +54,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
 }
 .product-section {
   padding-top: 5rem;
@@ -50,11 +64,11 @@ body {
 }
 .product-title {
   color: #6d758f;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 .product-description {
   color: #6d758f;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-bottom: 30px;
 }
 .product-card {
@@ -62,11 +76,12 @@ body {
   margin-bottom: 20px;
   width: 15rem;
   box-shadow: 0px 0px 30px #eef2f3;
+  transition: transform 0.3s;
 }
 .product-card img {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 .product-card-body {
@@ -74,6 +89,10 @@ body {
   color: #6d758f;
 
   padding: 10px;
+}
+
+.product-card:hover {
+  transform: scale(1.05);
 }
 
 .locations-section {
